--- a/_posts/2023-02-05-week04.md
+++ b/_posts/2023-02-05-week04.md
@@ -20,6 +20,13 @@ The Go programming language (which I had no idea was open source) had a very nea
 
 Seeing that this Code of Conduct is adapted from the Contributor Covenant, the main differences I see are in how Go somewhat expanded every section to give a more detailed and precise view of conduct as well as add an aditiona section for Conflict Resolution. I believe the main point of this was due to software culture for Go specifically. Even though I mentioned this should be part of a standard license, I do acknowledge that every organization/project has their individual values and ways of dealing with certain things, such as conflicts in this example. Eclipse's code of conduct, which is also adapted from Contributor Covenant, is different in some ways. Eclipse has a higher set of enforcement and "laws". For example, they give mentions of bad behavior types as well as a no retaliation andammendmants section. Similarily, the Sugar Labs code of conduct is much more plain and less exagerated-it provides more of a general outlook on good values.
 
+Tensorflow, which I chose as my open source project, also has a similar Code of Conduct to Eclipse and mixes in the generality of Sugar Labs. They are more into enforcing rules and punishing violations rather than setting up a good culture.
+
 Week 3:
+
+
+I really enjoyed working on the gib exercise during class on week 3. Being part of the computer science community, you always hear terms such as fork, commit, push thrown around all the time. I had a vague idea of what each of them did but I wasn't sure for certain until doing this exercise. I realize that Git is truly not something you master by just reading definitions online-it is something that you must use on a daily basis, similar to how you learn a programming language. I had used git a little in the past, but never solidified my understanding of the terms-especially upstreams.
+
+Regarding the firefox extension, I was assigned to group 5, where we worked on an extension that searched up professors on ratemyprofessor specifically for NYU students. Even though this current setup is for NYU students, I feel like it would be easy enough to apply to a larger group of schools (or in fact, any school that is recognized by ratemyprofessor.com). I joined during week 3, so I the project idea was bascially all decided, but I helped with solidifying the HTML code and experimenting with the pop-up bar. We had a groupchat and I was suprised by how efficient our communication was. From what I hear, the biggest difficulty was coming up with the idea, which makes sense.
 
 Week 4:
